--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <noscript>dj rise websites</noscript>
+  <noscript>dj rise website</noscript>
   <div id="root"></div>
   <!--
       This HTML file is a template.
@@ -37,6 +37,15 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-E5MYC2ZYXP"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-E5MYC2ZYXP');
+  </script>
 </body>
 
 </html>
