--- a/public/index.html
+++ b/public/index.html
@@ -38,13 +38,14 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-E5MYC2ZYXP"></script>
+<!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-T48JRK5N3N"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-E5MYC2ZYXP');
+    gtag('config', 'G-T48JRK5N3N');
   </script>
 </body>
 
