--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" property="og:description" content="RISE DJ Web App" />
-  <link name="image" rel="apple-touch-icon" property="og:image" href="/favicon.ico" />
+  <link name="image" rel="apple-touch-icon" property="og:image" href="/logo.png" />
   <meta name="type" property="og:type" content="website" />
   <meta name="url" property="og:url" content="https://www.djsrise.com/">
   <title>RISE DJ</title>
