--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,31 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="/favicon.ico" />
+
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="title" property="og:title" content="RISE DJ" />
-  <meta name="description" property="og:description" content="RISE DJ Web App" />
-  <link name="image" rel="apple-touch-icon" property="og:image" href="/favicon.ico" />
-  <meta name="type" property="og:type" content="website" />
-  <meta name="url" property="og:url" content="https://www.djsrise.com/">
+  <meta name="url" content="https://www.djsrise.com/" />
+  <meta name="type" content="website" />
+  <meta name="title" content="RISE DJ" />
+  <meta name="description" content="RISE DJ Web App" />
+
+  <meta property="og:title" content="RISE DJ" />
+  <meta property="og:description" content="RISE DJ Web App" />
+  <meta property="og:image" content="https://www.djsrise.com/favicon.ico" />
+  <meta property="og:url" content="https://www.djsrise.com/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="RISE DJ" />
+  <meta property="og:locale" content="en_CA" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="RISE DJ" />
+  <meta name="twitter:description" content="RISE DJ Web App" />
+  <meta name="twitter:image" content="https://www.djsrise.com/favicon.ico" />
+
+  <link rel="apple-touch-icon" href="/logo.png">
+
+
   <title>RISE DJ</title>
 </head>
 
