--- a/public/index.html
+++ b/public/index.html
@@ -1,47 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
 
-<head>
-  <meta charset="utf-8" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="url" content="https://www.djsrise.com/" />
+    <meta name="type" content="website" />
+    <meta name="title" content="DJ RISE" />
+    <meta name="description" content="DJ RISE Web App" />
 
-  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="url" content="https://www.djsrise.com/" />
-  <meta name="type" content="website" />
-  <meta name="title" content="RISE DJ" />
-  <meta name="description" content="RISE DJ Web App" />
+    <meta property="og:title" content="DJ RISE" />
+    <meta property="og:description" content="DJ RISE Web App" />
+    <meta property="og:image" content="https://www.djsrise.com/favicon.ico" />
+    <meta property="og:url" content="https://www.djsrise.com/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="DJ RISE" />
+    <meta property="og:locale" content="en_CA" />
 
-  <meta property="og:title" content="RISE DJ" />
-  <meta property="og:description" content="RISE DJ Web App" />
-  <meta property="og:image" content="https://www.djsrise.com/favicon.ico" />
-  <meta property="og:url" content="https://www.djsrise.com/" />
-  <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="RISE DJ" />
-  <meta property="og:locale" content="en_CA" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="DJ RISE" />
+    <meta name="twitter:description" content="DJ RISE Web App" />
+    <meta name="twitter:image" content="https://www.djsrise.com/favicon.ico" />
 
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="RISE DJ" />
-  <meta name="twitter:description" content="RISE DJ Web App" />
-  <meta name="twitter:image" content="https://www.djsrise.com/favicon.ico" />
+    <link rel="apple-touch-icon" href="/logo.png" />
 
-  <link rel="apple-touch-icon" href="/logo.png">
+    <title>DJ RISE</title>
+  </head>
 
+  <body>
+    <div id="root"></div>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-T48JRK5N3N"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  <title>RISE DJ</title>
-</head>
-
-<body>
-  <div id="root"></div>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-T48JRK5N3N"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-T48JRK5N3N');
-  </script>
-</body>
-
+      gtag("config", "G-T48JRK5N3N");
+    </script>
+  </body>
 </html>
