added new domain to public index

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="url" content="https://www.djsrise.com/" />
+    <meta name="url" content="https://www.djrise.party/" />
     <meta name="type" content="website" />
     <meta name="title" content="DJ RISE" />
     <meta
@@ -22,8 +22,8 @@
       property="og:description"
       content="Join DJ RISE for unforgettable music events. Discover DJ sessions for private parties, weddings, and other events with organic and energetic beats."
     />
-    <meta property="og:image" content="https://www.djsrise.com/logo.png" />
-    <meta property="og:url" content="https://www.djsrise.com/" />
+    <meta property="og:image" content="https://www.djrise.party/logo.png" />
+    <meta property="og:url" content="https://www.djrise.party/" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="DJ RISE" />
     <meta property="og:locale" content="en_CA" />
@@ -34,10 +34,10 @@
       name="twitter:description"
       content="Join DJ RISE for unforgettable music events. Discover DJ sessions for private parties, weddings, and other events with organic and energetic beats"
     />
-    <meta name="twitter:image" content="https://www.djsrise.com/logo.png" />
+    <meta name="twitter:image" content="https://www.djrise.party/logo.png" />
 
     <link rel="apple-touch-icon" href="/logo.png" />
-    <link rel="canonical" href="https://www.djsrise.com/" />
+    <link rel="canonical" href="https://www.djrise.party/" />
 
     <title>DJ RISE</title>
 
@@ -60,18 +60,18 @@
             "addressCountry": "CA"
           }
         },
-        "image": ["https://www.djsrise.com/social-share-image.jpg"],
+        "image": ["https://www.djrise.party/social-share-image.jpg"],
         "description": "Join DJ RISE for an unforgettable night of music and entertainment. Experience DJ sessions for private parties, weddings, and other live events with energetic beats.",
         "organizer": {
           "@type": "Organization",
           "name": "DJ RISE",
-          "url": "https://www.djsrise.com"
+          "url": "https://www.djrise.party"
         },
         "eventStatus": "https://schema.org/EventScheduled",
         "eventAttendanceMode": "https://schema.org/OfflineEventAttendanceMode",
         "offers": {
           "@type": "Offer",
-          "url": "https://www.djsrise.com/calendar",
+          "url": "https://www.djrise.party/calendar",
           "price": "500.00",
           "priceCurrency": "CAD",
           "availability": "https://schema.org/InStock",
