--- a/public/index.html
+++ b/public/index.html
@@ -104,6 +104,20 @@
         }
       ]
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-T48JRK5N3N"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-T48JRK5N3N");
+    </script>
   </head>
 
   <body>
