added optiomization to speedup loading

--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,25 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="robots" content="index, follow, max-image-preview:large" />
     <meta name="url" content="https://www.djrise.party/" />
     <meta name="type" content="website" />
-    <meta name="title" content="DJ RISE" />
+    <meta
+      name="title"
+      content="DJ RISE - Professional DJ Services in Vancouver | Weddings & Events"
+    />
     <meta
       name="description"
-      content="Join DJ RISE for unforgettable music events. Discover DJ sessions for private parties, weddings, and other events with organic and energetic beats."
+      content="Book DJ RISE for your next event in Vancouver! Professional DJ services for weddings, corporate events, and private parties. Experience high-energy music mixing with state-of-the-art equipment. Call now to check availability!"
     />
     <meta
       name="keywords"
-      content="DJ RISE, DJ events, private parties, wedding DJ, music events, live DJ sessions, energetic beats, DJ services"
+      content="DJ RISE, Vancouver DJ, wedding DJ, corporate events DJ, private party DJ, music events, live DJ sessions, energetic beats, DJ services, Vancouver DJ hire, professional DJ, event entertainment, music mixing, party DJ, celebration DJ"
     />
+
+    <!-- Preload critical resources -->
+    <link rel="preload" href="/logo.png" as="image" />
+    <link rel="preload" href="/favicon.ico" as="image" />
 
     <meta property="og:title" content="DJ RISE" />
     <meta
@@ -122,19 +130,5 @@
 
   <body>
     <div id="root"></div>
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-T48JRK5N3N"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-T48JRK5N3N");
-    </script>
   </body>
 </html>
